# avr-seven-segment

./: .gitmodules  CMakeLists.txt
include/: seduce.h
src/: seven-segment.c
